# pydantic-gamma

./: pyproject.toml
pydantic_gamma/: __init__.py  agent.py  errors.py  fields.py  model.py
tests/: test_agent.py  test_model.py
